--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,6 @@
   "containsWidget": true,
   "widgetApi": "1.0.0",
   "networkAccess": {
-    "allowedDomains": [
-      "none"
-    ]
+  "allowedDomains": ["https://api.hydraai.ru"]
   }
 }
