--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-# Node
-*.log
-*.log.*
-node_modules
+# Node.js
+node_modules/
 
-out/
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.eslintcache
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+*.lnk
+
+# Build artifacts
 dist/
-code.js
+build/
+coverage/
+
+# IDE and editor
+.idea/
+.vscode/
+
+# Package manager files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Key
+.env
