refactor: Simplify manifest and package.json, integrate JSZip, and initial HTML/CSS generation

--- a/package.json
+++ b/package.json
@@ -1,33 +1,13 @@
 {
-  "name": "pixso_export",
-  "version": "1.0.0",
-  "description": "Figma plugin to export components to TXT/HTML/CSS",
-  "main": "dist/code.js",
   "scripts": {
-    "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --format=iife --platform=node --define:process.env.NODE_ENV='\"production\"' --define:process.env.BASE_URL='\"YOUR_BASE_URL\"' --define:process.env.HYDRA_AI_API_KEY='\"YOUR_HYDRA_AI_API_KEY\"' --define:process.env.GPT_MODEL_NAME='\"gpt-3.5-turbo\"'",
-    "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --format=iife --platform=node --define:process.env.NODE_ENV='\"production\"' --define:process.env.BASE_URL='\"YOUR_BASE_URL\"' --define:process.env.HYDRA_AI_API_KEY='\"YOUR_HYDRA_AI_API_KEY\"' --define:process.env.GPT_MODEL_NAME='\"gpt-3.5-turbo\"' --watch",
-    "dev": "npm run watch",
-    "lint": "eslint src/",
-    "test": "echo \"No tests specified\""
+    "copy:ui": "cp src/ui.html dist/ui.html",
+    "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --format=iife --platform=browser",
+    "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --format=iife --platform=browser --watch",
+    "dev": "npm run watch"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.95.0",
-    "@types/node": "^20.0.0",
     "esbuild": "^0.21.0",
-    "eslint": "^8.0.0",
     "typescript": "^5.0.0"
-  },
-  "keywords": [
-    "figma",
-    "plugin",
-    "export",
-    "html",
-    "css",
-    "hydraai"
-  ],
-  "author": "You",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^17.2.3"
   }
 }
