--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,8 @@
   "name": "Figma to HTML/CSS Exporter",
   "id": "1562380729278066559",
   "api": "1.0.0",
-  "main": "./dist/code.js",
-  "ui": "./dist/ui.html",
-  "capabilities": [],
-  "enableProposedApi": false,
-  "documentAccess": "dynamic-page",
+  "main": "dist/code.js",
+  "ui": "dist/ui.html",
   "editorType": ["figma"],
   "networkAccess": {
     "allowedDomains": ["https://api.hydraai.ru"]
