--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
   "main": "dist/code.js",
   "ui": "dist/ui.html",
   "editorType": ["figma"],
+  "capabilities": [],
+  "enableProposedApi": false,
+  "documentAccess": "current-page",
   "networkAccess": {
     "allowedDomains": ["https://api.hydraai.ru"]
   }
